--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,10 +29,11 @@ jobs:
   gtfs-check:
     name: GTFS routes check
     runs-on: ubuntu-latest
+    needs: syntax-check
     steps:
       - name: Checkout repository
         uses: actions/checkout@v6
-        
+
       - name: Check GTFS routes match lines_picto
         run: |
           python - <<'PY'
@@ -112,7 +113,7 @@ jobs:
 
   deploy:
     if: github.ref == 'refs/heads/main'
-    needs: syntax-check
+    needs: [syntax-check, gtfs-check]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
